--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>discovery</module>
 		<module>monitoring</module>
 		<module>ranking</module>
+		<module>msee-website</module>
 	</modules>
 
 	<name>sesa-project</name>
