Fixed some pom files

--- a/invocation/core/pom.xml
+++ b/invocation/core/pom.xml
@@ -11,6 +11,16 @@
 		<version>m16.1-SNAPSHOT</version>
 	</parent>
 
+
+ 	<build>
+ 		<resources>
+ 			<resource>
+ 				<directory>src/main/resources</directory>
+ 				<filtering>true</filtering>
+ 			</resource>
+ 		</resources>
+ 	</build>
+
 	<dependencies>
 		<!-- projects -->
 		<dependency>
