79: Discovery API refactoring fixing path dependencies and cleanup http://redmine.sesa.sti2.at/issues/show/79

--- a/discovery/core/src/main/resources/default.properties
+++ b/discovery/core/src/main/resources/default.properties
@@ -2,5 +2,5 @@
 # Triplestore Access Information
 ######################################
 discovery.sesame.endpoint = ${discovery.sesame.endpoint}
-discovery.sesame.reposid = ${discovery.repo}
+discovery.sesame.reposid = ${discovery.sesame.repository.name}
 
