--- a/discovery/core/pom.xml
+++ b/discovery/core/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>at.sti2.msee.delivery</groupId>
 		<artifactId>discovery</artifactId>
-		<version>m16.1-SNAPSHOT</version>
+		<version>m17.1-SNAPSHOT</version>
 	</parent>
 
 <!-- 	<build> -->
@@ -23,11 +23,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>discovery-api</artifactId>
+			<artifactId>discovery.api</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>at.sti2.msee</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>util.triplestore.client</artifactId>
 			<version>${project.parent.version}</version>			
 		</dependency>
