--- a/discovery/webservice/pom.xml
+++ b/discovery/webservice/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>at.sti2.msee.delivery</groupId>
 		<artifactId>discovery</artifactId>
-		<version>m16.1-SNAPSHOT</version>
+		<version>m17.1-SNAPSHOT</version>
 	</parent>
 
 
@@ -88,13 +88,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>discovery-api</artifactId>
+			<artifactId>discovery.api</artifactId>
 			<version>${project.parent.version}</version>			
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>discovery-core</artifactId>
+			<artifactId>discovery.core</artifactId>
 			<version>${project.parent.version}</version>			
 			<scope>compile</scope>
 		</dependency>
