--- a/registration/pom.xml
+++ b/registration/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>registration</artifactId>
 	<packaging>pom</packaging>
-	
+
 	<parent>
 		<groupId>at.sti2.msee.delivery</groupId>
-		<version>m16.1-SNAPSHOT</version>
+		<version>m17.1-SNAPSHOT</version>
 		<artifactId>platform</artifactId>
 	</parent>
 
@@ -15,12 +16,5 @@
 		<module>core</module>
 		<module>webservice</module>
 	</modules>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<cxf.version>2.3.3</cxf.version>
-		<saxon.version>8.7</saxon.version>
-		<axis.version>1.5.4</axis.version>
-	</properties>
 
 </project>
