--- a/registration/webservice/pom.xml
+++ b/registration/webservice/pom.xml
@@ -8,109 +8,104 @@
 	<parent>
 		<groupId>at.sti2.msee.delivery</groupId>
 		<artifactId>registration</artifactId>
-		<version>m16.1-SNAPSHOT</version>
+		<version>m17.1-SNAPSHOT</version>
 	</parent>
 
+<!-- 	<build> -->
+<!-- 		<plugins> -->
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.codehaus.mojo</groupId> -->
+<!-- 				<artifactId>tomcat-maven-plugin</artifactId> -->
+<!-- 			</plugin> -->
+<!-- 			<plugin> -->
+<!-- 				<artifactId>maven-assembly-plugin</artifactId> -->
+<!-- 			</plugin> -->
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.cxf</groupId> -->
+<!-- 				<artifactId>cxf-java2ws-plugin</artifactId> -->
+<!-- 			</plugin> -->
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.mortbay.jetty</groupId> -->
+<!-- 				<artifactId>maven-jetty-plugin</artifactId> -->
+<!-- 			</plugin> -->
+<!-- 		</plugins> -->
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+<!-- 		<pluginManagement> -->
+<!-- 			<plugins> -->
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-java2ws-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-			</plugin>
-		</plugins>
+<!-- 				<plugin>use mvn tomcat:deploy or mvn tomcat:undeploy -->
+<!-- 					<groupId>org.codehaus.mojo</groupId> -->
+<!-- 					<artifactId>tomcat-maven-plugin</artifactId> -->
+<!-- 				</plugin> -->
 
-		<pluginManagement>
-			<plugins>
+<!-- 				Below plugin provides a separate JAR for the JAX-WS artifacts (i.e., -->
+<!-- 					the Java classes created by running wsdl2java or wsimport), as this JAR will  -->
+<!-- 					also be used by the SOAP client. --> 
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 					<artifactId>maven-assembly-plugin</artifactId> -->
+<!-- 				</plugin> -->
 
-				<plugin><!--use mvn tomcat:deploy or mvn tomcat:undeploy -->
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>tomcat-maven-plugin</artifactId>
-				</plugin>
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.cxf</groupId> -->
+<!-- 					<artifactId>cxf-java2ws-plugin</artifactId> -->
+<!-- 					<version>${cxf.version}</version> -->
+<!-- 					<dependencies> -->
+<!-- 						<dependency> -->
+<!-- 							<groupId>org.apache.cxf</groupId> -->
+<!-- 							<artifactId>cxf-rt-frontend-jaxws</artifactId> -->
+<!-- 							<version>${cxf.version}</version> -->
+<!-- 						</dependency> -->
+<!-- 						<dependency> -->
+<!-- 							<groupId>org.apache.cxf</groupId> -->
+<!-- 							<artifactId>cxf-rt-frontend-simple</artifactId> -->
+<!-- 							<version>${cxf.version}</version> -->
+<!-- 						</dependency> -->
+<!-- 					</dependencies> -->
+<!-- 				</plugin> -->
 
-				<!-- Below plugin provides a separate JAR for the JAX-WS artifacts (i.e., 
-					the Java classes created by running wsdl2java or wsimport), as this JAR will 
-					also be used by the SOAP client. -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-assembly-plugin</artifactId>
-				</plugin>
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.mortbay.jetty</groupId> -->
+<!-- 					<artifactId>maven-jetty-plugin</artifactId> -->
+<!-- 					<configuration> -->
+<!-- 						<scanIntervalSeconds>10</scanIntervalSeconds> -->
+<!-- 						<connectors> -->
+<!-- 							<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector"> -->
+<!-- 								<port>${registration.ws.port}</port> -->
+<!-- 								<maxIdleTime>60000</maxIdleTime> -->
+<!-- 							</connector> -->
+<!-- 						</connectors> -->
+<!-- 					</configuration> -->
+<!-- 				</plugin> -->
 
-				<plugin>
-					<groupId>org.apache.cxf</groupId>
-					<artifactId>cxf-java2ws-plugin</artifactId>
-					<version>${cxf.version}</version>
-					<dependencies>
-						<dependency>
-							<groupId>org.apache.cxf</groupId>
-							<artifactId>cxf-rt-frontend-jaxws</artifactId>
-							<version>${cxf.version}</version>
-						</dependency>
-						<dependency>
-							<groupId>org.apache.cxf</groupId>
-							<artifactId>cxf-rt-frontend-simple</artifactId>
-							<version>${cxf.version}</version>
-						</dependency>
-					</dependencies>
-				</plugin>
-
-				<plugin>
-					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>maven-jetty-plugin</artifactId>
-					<configuration>
-						<scanIntervalSeconds>10</scanIntervalSeconds>
-						<connectors>
-							<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-								<port>${registration.ws.port}</port>
-								<maxIdleTime>60000</maxIdleTime>
-							</connector>
-						</connectors>
-					</configuration>
-				</plugin>
-
-			</plugins>
-		</pluginManagement>
-	</build>
+<!-- 			</plugins> -->
+<!-- 		</pluginManagement> -->
+<!-- 	</build> -->
 
 
-	<dependencies>
-		<dependency>
-			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>registration.api</artifactId>
-			<version>${project.parent.version}</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>registration.core</artifactId>
-			<version>${project.parent.version}</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-frontend-jaxws</artifactId>
-			<version>2.3.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-transports-http</artifactId>
-			<version>2.3.3</version>			
-		</dependency>
-	</dependencies>
+<!-- 	<dependencies> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>${project.parent.groupId}</groupId> -->
+<!-- 			<artifactId>registration.api</artifactId> -->
+<!-- 			<version>${project.parent.version}</version> -->
+<!-- 			<scope>compile</scope> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>${project.parent.groupId}</groupId> -->
+<!-- 			<artifactId>registration.core</artifactId> -->
+<!-- 			<version>${project.parent.version}</version> -->
+<!-- 			<scope>compile</scope> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.cxf</groupId> -->
+<!-- 			<artifactId>cxf-rt-frontend-jaxws</artifactId> -->
+<!-- 			<version>2.3.3</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.cxf</groupId> -->
+<!-- 			<artifactId>cxf-rt-transports-http</artifactId> -->
+<!-- 			<version>2.3.3</version>			 -->
+<!-- 		</dependency> -->
+<!-- 	</dependencies> -->
 
 </project>
