--- a/util/ranking-framework/pom.xml
+++ b/util/ranking-framework/pom.xml
@@ -9,12 +9,10 @@
 		<cxf.version>2.2.3</cxf.version>
 	</properties>
 
-
-
 	<parent>
 		<groupId>at.sti2.msee.delivery</groupId>
 		<artifactId>util</artifactId>
-		<version>m16.1-SNAPSHOT</version>
+		<version>m17.1-SNAPSHOT</version>
 	</parent>
 
 	<!-- Repos -->
@@ -80,24 +78,10 @@
 
 <!--  Monitoring component -->
 		<dependency>
-			<groupId>at.sti2.msee.monitoring</groupId>
-			<artifactId>monitoring-api</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<groupId>at.sti2.msee.delivery</groupId>
+			<artifactId>util.triplestore.client</artifactId>
+			<version>${project.parent.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>at.sti2.msee.monitoring</groupId>
-			<artifactId>monitoring-core</artifactId>
-			<version>1.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>at.sti2.msee.util</groupId>
-			<artifactId>util-triplestore-client</artifactId>
-			<version>1.2-SNAPSHOT</version>
-		</dependency>
-
-
-
-
 		<!-- Aduna -->
 		<dependency>
 			<groupId>info.aduna</groupId>
@@ -244,15 +228,10 @@
 			<artifactId>validation</artifactId>
 			<version>1.0</version>
 		</dependency>
-
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 		</dependency>
 	</dependencies>
-
-
-
 </project>
