--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
+				<artifactId>registration.core</artifactId>
+				<version>${project.version}</version>
+			</dependency>			
+			<dependency>
+				<groupId>${project.groupId}</groupId>
 				<artifactId>util.triplestore.client</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -129,6 +134,18 @@
 				<groupId>org.ow2.easywsdl</groupId>
 				<artifactId>easywsdl-wsdl</artifactId>
 				<version>2.3</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-bundle</artifactId>
+				<version>2.7.3</version>
+				<type>jar</type>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.11</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
