--- a/registration/webservice/pom.xml
+++ b/registration/webservice/pom.xml
@@ -11,103 +11,29 @@
 		<version>m17.1-SNAPSHOT</version>
 	</parent>
 
-	<!-- <build> -->
-	<!-- <plugins> -->
-	<!-- <plugin> -->
-	<!-- <groupId>org.codehaus.mojo</groupId> -->
-	<!-- <artifactId>tomcat-maven-plugin</artifactId> -->
-	<!-- </plugin> -->
-	<!-- <plugin> -->
-	<!-- <artifactId>maven-assembly-plugin</artifactId> -->
-	<!-- </plugin> -->
-	<!-- <plugin> -->
-	<!-- <groupId>org.apache.cxf</groupId> -->
-	<!-- <artifactId>cxf-java2ws-plugin</artifactId> -->
-	<!-- </plugin> -->
-	<!-- <plugin> -->
-	<!-- <groupId>org.mortbay.jetty</groupId> -->
-	<!-- <artifactId>maven-jetty-plugin</artifactId> -->
-	<!-- </plugin> -->
-	<!-- </plugins> -->
-
-	<!-- <pluginManagement> -->
-	<!-- <plugins> -->
-
-	<!-- <plugin>use mvn tomcat:deploy or mvn tomcat:undeploy -->
-	<!-- <groupId>org.codehaus.mojo</groupId> -->
-	<!-- <artifactId>tomcat-maven-plugin</artifactId> -->
-	<!-- </plugin> -->
-
-	<!-- Below plugin provides a separate JAR for the JAX-WS artifacts (i.e., -->
-	<!-- the Java classes created by running wsdl2java or wsimport), as this 
-		JAR will -->
-	<!-- also be used by the SOAP client. -->
-	<!-- <plugin> -->
-	<!-- <groupId>org.apache.maven.plugins</groupId> -->
-	<!-- <artifactId>maven-assembly-plugin</artifactId> -->
-	<!-- </plugin> -->
-
-	<!-- <plugin> -->
-	<!-- <groupId>org.apache.cxf</groupId> -->
-	<!-- <artifactId>cxf-java2ws-plugin</artifactId> -->
-	<!-- <version>${cxf.version}</version> -->
-	<!-- <dependencies> -->
-	<!-- <dependency> -->
-	<!-- <groupId>org.apache.cxf</groupId> -->
-	<!-- <artifactId>cxf-rt-frontend-jaxws</artifactId> -->
-	<!-- <version>${cxf.version}</version> -->
-	<!-- </dependency> -->
-	<!-- <dependency> -->
-	<!-- <groupId>org.apache.cxf</groupId> -->
-	<!-- <artifactId>cxf-rt-frontend-simple</artifactId> -->
-	<!-- <version>${cxf.version}</version> -->
-	<!-- </dependency> -->
-	<!-- </dependencies> -->
-	<!-- </plugin> -->
-
-	<!-- <plugin> -->
-	<!-- <groupId>org.mortbay.jetty</groupId> -->
-	<!-- <artifactId>maven-jetty-plugin</artifactId> -->
-	<!-- <configuration> -->
-	<!-- <scanIntervalSeconds>10</scanIntervalSeconds> -->
-	<!-- <connectors> -->
-	<!-- <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector"> -->
-	<!-- <port>${registration.ws.port}</port> -->
-	<!-- <maxIdleTime>60000</maxIdleTime> -->
-	<!-- </connector> -->
-	<!-- </connectors> -->
-	<!-- </configuration> -->
-	<!-- </plugin> -->
-
-	<!-- </plugins> -->
-	<!-- </pluginManagement> -->
-	<!-- </build> -->
-
-
-	<!-- <dependencies> -->
-	<!-- <dependency> -->
-	<!-- <groupId>${project.parent.groupId}</groupId> -->
-	<!-- <artifactId>registration.api</artifactId> -->
-	<!-- <version>${project.parent.version}</version> -->
-	<!-- <scope>compile</scope> -->
-	<!-- </dependency> -->
-	<!-- <dependency> -->
-	<!-- <groupId>${project.parent.groupId}</groupId> -->
-	<!-- <artifactId>registration.core</artifactId> -->
-	<!-- <version>${project.parent.version}</version> -->
-	<!-- <scope>compile</scope> -->
-	<!-- </dependency> -->
-	<!-- <dependency> -->
-	<!-- <groupId>org.apache.cxf</groupId> -->
-	<!-- <artifactId>cxf-rt-frontend-jaxws</artifactId> -->
-	<!-- <version>2.3.3</version> -->
-	<!-- </dependency> -->
-	<!-- <dependency> -->
-	<!-- <groupId>org.apache.cxf</groupId> -->
-	<!-- <artifactId>cxf-rt-transports-http</artifactId> -->
-	<!-- <version>2.3.3</version> -->
-	<!-- </dependency> -->
-	<!-- </dependencies> -->
+	<build>
+		<plugins>
+			<plugin>
+				<!-- Generate WSDL files from annotations in the implementation -->
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-java2ws-plugin</artifactId>
+				<version>2.7.3</version>
+				<executions>
+					<execution>
+						<id>install</id>
+						<phase>install</phase>
+						<configuration>
+							<className>at.sti2.msee.registration.webservice.RegistrationWebService</className>
+							<genWsdl>true</genWsdl>
+						</configuration>
+						<goals>
+							<goal>java2ws</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<dependency>
@@ -115,13 +41,21 @@
 			<artifactId>registration.core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-bundle</artifactId>
 		</dependency>
+		<!-- Even though this is dependency of cxf it must be added explicitly for jetty -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>	
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
 		</dependency>
 	</dependencies>
-	
 </project>
