--- a/registration/webservice/pom.xml
+++ b/registration/webservice/pom.xml
@@ -23,8 +23,11 @@
 						<id>install</id>
 						<phase>install</phase>
 						<configuration>
-							<className>at.sti2.msee.registration.webservice.RegistrationWebService</className>
+							<className>at.sti2.msee.registration.webservice.Registration</className>
+							<outputFile>${project.build.directory}/../src/main/resources/RegistrationService.wsdl</outputFile>
 							<genWsdl>true</genWsdl>
+							<!-- <genClient>true</genClient> -->
+							<verbose>true</verbose>
 						</configuration>
 						<goals>
 							<goal>java2ws</goal>
@@ -34,7 +37,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<dependencies>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
@@ -48,7 +50,8 @@
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-bundle</artifactId>
 		</dependency>
-		<!-- Even though this is dependency of cxf it must be added explicitly for jetty -->
+		<!-- Even though this is dependency of cxf it must be added explicitly 
+			for jetty (maven problem) -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
