--- a/registration/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/registration/webservice/src/main/webapp/WEB-INF/web.xml
@@ -11,17 +11,17 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-                        classpath:META-INF/cxf/cxf.xml
-                        classpath:META-INF/cxf/cxf-servlet.xml
-                </param-value>
+            classpath:META-INF/cxf/cxf.xml
+            classpath:META-INF/cxf/cxf-servlet.xml
+        </param-value>
 	</context-param>
 	<servlet>
-		<servlet-name>WebServicePort</servlet-name>
+		<servlet-name>CXFServlet</servlet-name>
 		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>WebServicePort</servlet-name>
+		<servlet-name>CXFServlet</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 	<session-config>
