NEW - task 92: Apply dependency management to the Registration service http://redmine.sesa.sti2.at/issues/show/92
Updated pom (invocation minor issues)
Updated exception name in implementation

--- a/delivery-platform/pom.xml
+++ b/delivery-platform/pom.xml
@@ -3,13 +3,16 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.sti2.msee.delivery</groupId>
 	<artifactId>platform-full</artifactId>
-	<version>m17.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<parent>
+		<groupId>at.sti2.msee.delivery</groupId>
+		<artifactId>platform</artifactId>
+		<version>m17.1-SNAPSHOT</version>
+	</parent>
 </project>
