--- a/invocation/grounding/pom.xml
+++ b/invocation/grounding/pom.xml
@@ -52,5 +52,9 @@
 			<artifactId>saxon-dom</artifactId>
 			<version>8.7</version>
 		</dependency>
+		<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+			</dependency>
 	</dependencies>
 </project>
