--- a/invocation/core/pom.xml
+++ b/invocation/core/pom.xml
@@ -78,5 +78,9 @@
 			<artifactId>cxf-rt-transports-http</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+		<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+			</dependency>
 	</dependencies>
 </project>
