--- a/invocation/webservice/pom.xml
+++ b/invocation/webservice/pom.xml
@@ -111,6 +111,10 @@
 			<artifactId>cxf-rt-transports-http</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+		<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+			</dependency>
 	</dependencies>
 
 </project>
