--- a/discovery/pom.xml
+++ b/discovery/pom.xml
@@ -74,6 +74,13 @@
 				<version>4.5</version>
 				<scope>test</scope>
 			</dependency>
+			<!-- 
+			<dependency>
+				<groupId>org.jmock</groupId>
+				<artifactId>jmock-junit4</artifactId>
+				<version>2.6.0</version>
+			</dependency>
+			-->
 		</dependencies>
 	</dependencyManagement>
 
@@ -145,6 +152,16 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-junit4</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
 		</dependency>
 	</dependencies>
 </project>
