RESOLVED - task 94: Update msee website/frontend name and pom http://redmine.sesa.sti2.at/issues/show/94

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<modules>
 		<module>util</module>
 		<module>registration</module>
-		<module>dashboard</module>				
+		<!-- <module>dashboard</module> -->
 		<!-- <module>discovery</module> -->
 		<!-- <module>monitoring</module> -->
 		<!-- <module>invocation</module> -->
