IN PROGRESS - task 95: Remove references to Efreight from MSEE dashboard  http://redmine.sesa.sti2.at/issues/show/95

--- a/dashboard/public/assets/manifest.yml
+++ b/dashboard/public/assets/manifest.yml
@@ -5,9 +5,8 @@ dynatree/icons.gif: dynatree/icons-7b532b8d6f2327f8c228c68ff34b909c.gif
 dynatree/loading.gif: dynatree/loading-0d926319ed43c84f9d76c2c84bd05f8a.gif
 dynatree/vline-rtl.gif: dynatree/vline-rtl-cb2d051200a82da834af87638b7c7540.gif
 dynatree/vline.gif: dynatree/vline-5c7803e4e5d826658dcc1bce2533dabc.gif
-efreight_logo.jpg: efreight_logo-446c12f48cd47212ab5385b33670f4db.jpg
 grounding_component_messages.png: grounding_component_messages-8bb4a5777cbe4d61391030b5c179d782.png
-invocation_process_efreight.png: invocation_process_efreight-ffb56e2dc084ed5c673c79c96abb168e.png
+invocation_process_msee.png: invocation_process_msee-ffb56e2dc084ed5c673c79c96abb168e.png
 login.png: login-be297b87d954640d40fbf71c15bb0f36.png
 msee_logo.png: msee_logo-a7b6e809a9768fa893c615fa5a522052.png
 profile_icon.png: profile_icon-b23dfee5c737985506d312763d3c69da.png
@@ -20,16 +19,14 @@ star-rating/star.gif: star-rating/star-a673e960a0437d6dae5ecd835c91e5cc.gif
 sti_logo.gif: sti_logo-cef4a55f66f7f9805ffda37f5b0a74aa.gif
 xslt.png: xslt-963f4ee498d2cfc63fe96bb9114a101c.png
 about.js: about-885c1cefd9d73d37f643283b7759bd28.js
-application.js: application-2f192cf7815a9b71067e1a575130eff2.js
+application.js: application-c237ee8a2e823eea2483e31c6232f2c9.js
 dashboards.js: dashboards-885c1cefd9d73d37f643283b7759bd28.js
 dashboards/discoveries.js: dashboards/discoveries-44355d38f3c1f7828ce2a222d085f016.js
-dashboards/grounding.js: dashboards/grounding-536ee980aebd145dd307068afc7a70e0.js
 dashboards/registration.js: dashboards/registration-06969ddda546b7e100c53f679e8c44c7.js
 doc.js: doc-885c1cefd9d73d37f643283b7759bd28.js
 doc/efreight/transformation.js: doc/efreight/transformation-885c1cefd9d73d37f643283b7759bd28.js
 doc/ontology.js: doc/ontology-885c1cefd9d73d37f643283b7759bd28.js
 doc/service_annotation.js: doc/service_annotation-885c1cefd9d73d37f643283b7759bd28.js
-efreight.js: efreight-885c1cefd9d73d37f643283b7759bd28.js
 faq.js: faq-885c1cefd9d73d37f643283b7759bd28.js
 google_analytics.js: google_analytics-6202faae91a71b36d18aa76dc02ae4ba.js
 home.js: home-885c1cefd9d73d37f643283b7759bd28.js
@@ -131,7 +128,7 @@ bootstrap/bootstrap.min.css: bootstrap/bootstrap.min-8aba49ac2315bbf4745d39647ea
 prettify/prettify.css: prettify/prettify-79bb2a4d407061675b25e57ec4d14587.css
 jquery-ui.js: jquery-ui-bbb90ee49515fed4e68ea3d6f6ce0c9b.js
 jquery-ui.min.js: jquery-ui.min-ee70a38972ea986080f3f9b77a67c0e5.js
-jquery.js: jquery-71487c480477356a475542d8752c21db.js
-jquery.min.js: jquery.min-b3b239c8f4881cc57a988786f83dd908.js
-jquery.min.map: jquery.min-892e99df8803f2ad7c7eced7016315f5.map
-jquery_ujs.js: jquery_ujs-b622ae8bf8201d0766cc779998edfb9f.js
+jquery.js: jquery-66fbea4b7f1c8e43b4108050be9cd595.js
+jquery.min.js: jquery.min-aa5ad98b04d3a97128671b56936367fc.js
+jquery.min.map: jquery.min-0633f0a59e3d0cd55ac3518f228b2893.map
+jquery_ujs.js: jquery_ujs-a248078cac2b71d48c5134dc4c4e7507.js
