--- a/dashboard/Gemfile
+++ b/dashboard/Gemfile
@@ -37,7 +37,7 @@ gem "eventmachine", "~> 1.0.0.beta.4.1"
 # SOAP Library
 gem "savon",  '~>1.2.0'
 
-#XPATH
+#XPATHp
 gem "nokogiri", "~> 1.5.6"
 
 #XML decoding
