--- a/dashboard/.gitignore
+++ b/dashboard/.gitignore
@@ -8,6 +8,7 @@ capybara-*.html
 /vendor/bundle
 /log/*
 /tmp/*
+/lib/jar/*
 /db/*.sqlite3
 /public/system/*
 /coverage/
@@ -16,3 +17,4 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 .project
+*.war
