--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -3,8 +3,6 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>at.sti2.msee.frontend</groupId>
-	<!-- notice how we specify the packaging to be a war, that way, maven knows 
-		where to copy the jar files -->
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<artifactId>mseewebsite</artifactId>
@@ -16,6 +14,15 @@
 		<version>1.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
+	
+	<dependencies>
+		<dependency>
+			<groupId>at.sti2.msee.delivery</groupId>
+			<artifactId>registration.core</artifactId>
+			<version>m17.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<finalName>msee</finalName>
 		<plugins>
@@ -34,14 +41,6 @@
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
 			</plugin>
-			<!-- uncommented due to slow precomiling -->
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-antrun-plugin</artifactId> 
-				<version>1.7</version> <executions> <execution> <id>precompile-assets</id> 
-				<phase>package</phase> <goals> <goal>run</goal> </goals> <configuration> 
-				<target name="Precompile assets"> <exec executable="sh" dir="${project.basedir}" 
-				failonerror="true"> <arg value="-c" /> <arg value="bundle exec rake assets:precompile" 
-				/> </exec> </target> </configuration> </execution> </executions> </plugin> -->
-
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
@@ -100,8 +99,8 @@
 								<argument>-c</argument>
 								<argument>
 									rm -rf *.war tmp/war
-									jruby -S warble
-									mv *.war target/msee.war
+									<!-- TODO: jruby -S warble
+									mv *.war target/dashboard.war -->
 								</argument>
 							</arguments>
 						</configuration>
@@ -111,43 +110,29 @@
 					</execution>
 				</executions>
 			</plugin>
+
+<!--  Add all dependencies to the lib folder of the rails app -->
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <phase>install</phase>
+                                    <goals>
+                                        <goal>copy-dependencies</goal>
+                                    </goals>
+                                    <configuration>
+                                        <outputDirectory> ${basedir}/lib/jar</outputDirectory>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                    </plugin>
+
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-dependency-plugin
-										</artifactId>
-										<versionRange>
-											[2.6,)
-										</versionRange>
-										<goals>
-											<goal>
-												copy-dependencies
-											</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+
+
 	</build>
+	           
+
+
+
 </project>
