--- a/discovery/core/pom.xml
+++ b/discovery/core/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
-
 	<artifactId>discovery.core</artifactId>
 	<packaging>jar</packaging>
 
@@ -15,21 +15,19 @@
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>discovery.api</artifactId>
-			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>util.triplestore.client</artifactId>
-			<version>${project.parent.version}</version>			
+			<artifactId>util.triplestore.client</artifactId>		
 		</dependency>
 		<dependency>
-			<groupId>dom4j</groupId>
-			<artifactId>dom4j</artifactId>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>	
 		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>stringtemplate</artifactId>
-			<version>3.2</version>
 		</dependency>
 	</dependencies>
+
 </project>
