--- a/discovery/pom.xml
+++ b/discovery/pom.xml
@@ -16,7 +16,7 @@
 		<module>core</module>
 		<module>webservice</module>
 	</modules>
-
+<!-- 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<cxf.version>2.4.1</cxf.version>
@@ -26,7 +26,7 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- cxf -->
+			cxf
 			<dependency>
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-rt-frontend-jaxws</artifactId>
@@ -42,7 +42,7 @@
 				<artifactId>dom4j</artifactId>
 				<version>1.6.1</version>
 			</dependency>
-			<!-- xslt and xquery processor (needed for xslt 2.0) -->
+			xslt and xquery processor (needed for xslt 2.0)
 			<dependency>
 				<groupId>net.sf.saxon</groupId>
 				<artifactId>saxon</artifactId>
@@ -54,13 +54,13 @@
 				<version>${saxon.version}</version>
 			</dependency>
 
-			<!-- TOOLS -->
+			TOOLS
 			<dependency>
 				<groupId>log4j</groupId>
 				<artifactId>log4j</artifactId>
 				<version>1.2.16</version>
-				<!-- Because the JDK1.6 already include the Java Activation API, otherwise 
-					this could generate ClassLoading en Linkage errors -->
+				Because the JDK1.6 already include the Java Activation API, otherwise 
+					this could generate ClassLoading en Linkage errors
 				<exclusions>
 					<exclusion>
 						<groupId>javax.activation</groupId>
@@ -74,76 +74,76 @@
 				<version>4.5</version>
 				<scope>test</scope>
 			</dependency>
-			<!-- 
+			
 			<dependency>
 				<groupId>org.jmock</groupId>
 				<artifactId>jmock-junit4</artifactId>
 				<version>2.6.0</version>
 			</dependency>
-			-->
+			
 		</dependencies>
 	</dependencyManagement>
 
 	<build>
 		<pluginManagement>
 			<plugins>
-				<!-- <plugin> -->
-				<!-- <groupId>org.apache.maven.plugins</groupId> -->
-				<!-- <artifactId>maven-assembly-plugin</artifactId> -->
-				<!-- <version>2.2.1</version> -->
-				<!-- <configuration> -->
-				<!-- <descriptors> -->
-				<!-- <descriptor>src/assembly/jaxws-jar.xml</descriptor> -->
-				<!-- </descriptors> -->
-				<!-- <appendAssemblyId>true</appendAssemblyId> -->
-				<!-- <attach>true</attach> -->
-				<!-- </configuration> -->
-				<!-- <executions> -->
-				<!-- <execution> -->
-				<!-- <id>make-assembly</id> -->
-				<!-- <phase>package</phase> -->
-				<!-- <goals> -->
-				<!-- <goal>single</goal> -->
-				<!-- </goals> -->
-				<!-- </execution> -->
-				<!-- </executions> -->
-				<!-- </plugin> -->
+				<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2.1</version>
+				<configuration>
+				<descriptors>
+				<descriptor>src/assembly/jaxws-jar.xml</descriptor>
+				</descriptors>
+				<appendAssemblyId>true</appendAssemblyId>
+				<attach>true</attach>
+				</configuration>
+				<executions>
+				<execution>
+				<id>make-assembly</id>
+				<phase>package</phase>
+				<goals>
+				<goal>single</goal>
+				</goals>
+				</execution>
+				</executions>
+				</plugin>
 
-				<!-- <plugin>use mvn tomcat:deploy or mvn tomcat:undeploy -->
-				<!-- <groupId>org.codehaus.mojo</groupId> -->
-				<!-- <artifactId>tomcat-maven-plugin</artifactId> -->
-				<!-- <version>1.1</version> -->
-				<!-- <configuration> -->
-				<!-- settings.xml needs <server>...</server> with username/credentials. -->
-				<!-- see http://mojo.codehaus.org/tomcat-maven-plugin/configuration.html -->
-				<!-- <server>sesa-tomcat6</server> -->
-				<!-- <url>http://sesa.sti2.at:8080/manager</url> -->
-				<!-- </configuration> -->
-				<!-- </plugin> -->
+				<plugin>use mvn tomcat:deploy or mvn tomcat:undeploy
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<version>1.1</version>
+				<configuration>
+				settings.xml needs <server>...</server> with username/credentials.
+				see http://mojo.codehaus.org/tomcat-maven-plugin/configuration.html
+				<server>sesa-tomcat6</server>
+				<url>http://sesa.sti2.at:8080/manager</url>
+				</configuration>
+				</plugin>
 
-				<!-- <plugin> -->
-				<!-- <groupId>org.apache.cxf</groupId> -->
-				<!-- <artifactId>cxf-java2ws-plugin</artifactId> -->
-				<!-- <version>${cxf.version}</version> -->
-				<!-- <dependencies> -->
-				<!-- <dependency> -->
-				<!-- <groupId>org.apache.cxf</groupId> -->
-				<!-- <artifactId>cxf-rt-frontend-jaxws</artifactId> -->
-				<!-- <version>${cxf.version}</version> -->
-				<!-- </dependency> -->
-				<!-- <dependency> -->
-				<!-- <groupId>org.apache.cxf</groupId> -->
-				<!-- <artifactId>cxf-rt-frontend-simple</artifactId> -->
-				<!-- <version>${cxf.version}</version> -->
-				<!-- </dependency> -->
-				<!-- </dependencies> -->
-				<!-- </plugin> -->
+				<plugin>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-java2ws-plugin</artifactId>
+				<version>${cxf.version}</version>
+				<dependencies>
+				<dependency>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-rt-frontend-jaxws</artifactId>
+				<version>${cxf.version}</version>
+				</dependency>
+				<dependency>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-rt-frontend-simple</artifactId>
+				<version>${cxf.version}</version>
+				</dependency>
+				</dependencies>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
 		
-	<!-- DEPENDENCIES -->
-	<!-- these dependencies are included in every child project -->
+	DEPENDENCIES
+	these dependencies are included in every child project
 	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -163,5 +163,5 @@
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
 		</dependency>
-	</dependencies>
+	</dependencies> -->
 </project>
